Bug 933369 part 2 - Fix Load/Store TypedArrayElementStatic type policy. r=bhackett